# memorymesh

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  api.py  pyproject.toml  sandbox.py  swarm_simulation.py
memorymesh/: __init__.py  memory_node.py  mesh_core.py  temporal.py  trust_engine.py  types.py  wal.py
memorymesh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mesh-dashboard/: index.html  package-lock.json  package.json
mesh-dashboard/src/: App.jsx
tests/: test_brain_stem.py  test_conflict_resolution.py  test_temporal.py
