[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorymesh"
version = "0.3.0"
description = "The Persistent Cognitive Substrate for the Agentic Internet"
requires-python = ">=3.11"
dependencies = [
  "networkx>=3.2",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-benchmark>=4.0",
]
gpu = [
  "faiss-gpu>=1.7",
  "cugraph>=24.02",
  "cudf>=24.02",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
  "gpu: marks tests requiring GPU hardware",
]

[tool.setuptools.packages.find]
include = ["memorymesh*"]
